# zcrypto

./: .cz.toml  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  ruff.toml  zcrypto.toml
.claude/: settings.json
.claude/rules/: branch-workflow.md  commit-messages.md  decisions-log.md  iterations-history.md  open-topics.md  pull-requests.md  readme-usage.md  (+1 more)
.github/: dependabot.yml  pull_request_template.md  settings.yml
cli/: __main__.py  config.py  constants.py
docs/: iterations-history.md
scripts/: README.md  backfill_funding.py  gen_example_data.py  redis.sh
tests/: data_fixtures.py  test_acquire_old_luna.py  test_backfill_funding.py  test_calibrate_execution.py  test_cli.py  test_config.py  test_constants.py  test_cross_asset.py  test_cv.py  test_data_aggtrades.py  test_data_backfill.py  test_data_basis.py  test_data_binance.py  test_data_command.py  test_data_config.py  test_data_delist.py  test_data_derivatives_features.py  test_data_derivatives_pipeline.py  test_data_download.py  test_data_drop.py  test_data_e2e.py  test_data_funding_delist_rename.py  test_data_funding_drop_rename.py  test_data_index.py  test_data_klines.py  test_data_layout.py  test_data_metrics.py  test_data_migration.py  test_data_mirror.py  test_data_onchain.py  test_data_pipeline.py  test_data_qlib_writer.py  test_data_rename.py  test_data_snapshots.py  test_data_verify.py  test_example_command.py  test_example_dataset.py  test_example_workflow.py  test_experiment_cache.py  test_experiment_caveats.py  (+27 more)
(+258 files in other folders)
