[project]
name = "zcrypto"
version = "0.0.0"
description = "Quant trading using Qlib"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pyqlib>=0.9.7",
    "typer>=0.26.7",
]

[project.scripts]
zcrypto = "cli.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
exclude = ["cli/example/scripts/**"]

[tool.coverage.run]
source = ["cli"]
omit = ["cli/example/scripts/*"]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
