[project]
name = "zcrypto"
version = "0.2.0"
description = "Quant trading using Qlib"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "kaleido>=1.3.0",
    "plotly>=6.8.0",
    "pyqlib>=0.9.7",
    "tables>=3.11.1",
    "typer>=0.26.7",
    "urllib3>=2.7.0",
]

[project.scripts]
zcrypto = "cli.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
exclude = ["cli/example/scripts/**", "cli/experiment/data/scripts/**"]

[tool.coverage.run]
source = ["cli"]
omit = ["cli/example/scripts/*", "cli/experiment/data/scripts/*"]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
